--- a/client/src/app/components/Carousel/carousel.css
+++ b/client/src/app/components/Carousel/carousel.css
@@ -1,17 +1,18 @@
 .carouselWrapper {
   display: flex;
   width: 100%;
+  flex-direction: row;
 }
 
 .carouselSlide {
   flex: 0 0 auto;
-  opacity: 0;
   transition: all 0.5s ease;
+  opacity: 0;
   width: 100%;
 }
 
 .carouselSlide .active {
-  opacity: 1;
+  opacity: initial;
 }
 
 .carouselSlides {
@@ -19,8 +20,15 @@
   transition: all 0.5s ease;
 }
 
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .navButton {
-  font-size: 10em;
-  padding: 1em;
-  border: 0.1em solid "#a9a9a9";
+  font-size: 2em;
+  padding: 0 0.5em;
+  border: 0.01em solid #a9a9a9;
+  border-radius: 0.5em;
 }
